# cc-fastapi-vue3

./: .gitignore  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .env  .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_name }}/frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
{{ cookiecutter.project_name }}/tests/: test-main.py
{{ cookiecutter.project_name }}/{{cookiecutter.package_name}}/: appserver.py  main.py
{{ cookiecutter.project_name }}/{{cookiecutter.package_name}}/apps/: __init__.py
{{ cookiecutter.project_name }}/{{cookiecutter.package_name}}/apps/auth/: api_auth.py  dao_org.py  dao_res.py  dao_role.py  dao_user.py
{{ cookiecutter.project_name }}/{{cookiecutter.package_name}}/core/: db.py  init_db.py  log.py  middlewares.py  settings.py  utils_auth.py  utils_resp.py
